change attendance policy header

--- a/app/views/dashboard/attendance_policy.html.haml
+++ b/app/views/dashboard/attendance_policy.html.haml
@@ -1,6 +1,9 @@
-= render partial: 'shared/title', locals: { title: "Attendance Policy", date: nil }
+.stripe.reverse#banner
+  .row
+    .large-12.columns
+      %h2 Attendance Policy
 
-%section#banner
+.stripe.reverse
   .row
     .large-12.columns
       %p
