move striped dashboard containers

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -4,7 +4,8 @@
       %p.lead
         <strong>codebar</strong> is a non-profit initiative that facilitates the growth of a diverse tech community by running regular programming workshops.
 
-%section.testimonials.stripe.reverse
+%section.testimonials
+  .stripe
   .row
     .large-12.columns
       %p.lead
@@ -14,61 +15,61 @@
       .large-offset-1.large-11.columns
         = render partial: 'members/testimonials'
 
-.stripe.reverse
-  .row#showcase
-    .large-4.columns
-      .text-center
-        %h4 Our students
-        = image_tag "students.png"
-      %p Our students come from a variety of backgrounds. Some want to become developers and others would simply like to learn the basics of coding in a supportive and social environment.
-      %p
-        Sign up to join our vibrant community and to attend our workshops and programming events.
+  .stripe
+    .row#showcase
+      .large-4.columns
+        .text-center
+          %h4 Our students
+          = image_tag "students.png"
+        %p Our students come from a variety of backgrounds. Some want to become developers and others would simply like to learn the basics of coding in a supportive and social environment.
+        %p
+          Sign up to join our vibrant community and to attend our workshops and programming events.
 
-      .text-center
-        = link_to "Learn to code!", new_member_path, class: 'button secondary tiny'
-    .large-4.columns
-      .text-center
-        %h4 What we teach
-        = image_tag "teaching.png"
-      %p
-        We encourage new students to get started by working on our #{link_to "tutorials", "http://tutorials.codebar.io"} and learning HTML & CSS before moving into JavaScript, Ruby or Python. We also help them understand programming concepts!
-      %p We are always on the lookout for more developers to join our community and teach at our workshops.
-      .text-center
-        = link_to "Help out by becoming a coach", new_member_path, class: 'button tiny'
-    .large-4.columns
-      .text-center
-        %h4 Workshops
-        = image_tag "collaboration.png"
-        %br
-      %p We are sponsored and hosted by some amazing companies who support our cause. We usually spend the first 30' checking people in and having some food and a chat, followed by a lightning talk and <strong>lot's of coding</strong>!
-      %p
-        Help our expansion and enable us to provide help and support to our chapters by hosting and sponsoring our workshops.
-
-
-      .text-center
-        = link_to "Sponsor a workshop", new_member_path, class: 'button tiny'
+        .text-center
+          = link_to "Learn to code!", new_member_path, class: 'button secondary tiny'
+      .large-4.columns
+        .text-center
+          %h4 What we teach
+          = image_tag "teaching.png"
+        %p
+          We encourage new students to get started by working on our #{link_to "tutorials", "http://tutorials.codebar.io"} and learning HTML & CSS before moving into JavaScript, Ruby or Python. We also help them understand programming concepts!
+        %p We are always on the lookout for more developers to join our community and teach at our workshops.
+        .text-center
+          = link_to "Help out by becoming a coach", new_member_path, class: 'button tiny'
+      .large-4.columns
+        .text-center
+          %h4 Workshops
+          = image_tag "collaboration.png"
+          %br
+        %p We are sponsored and hosted by some amazing companies who support our cause. We usually spend the first 30' checking people in and having some food and a chat, followed by a lightning talk and <strong>lot's of coding</strong>!
+        %p
+          Help our expansion and enable us to provide help and support to our chapters by hosting and sponsoring our workshops.
 
 
-%section#chapter.strip
-  .events
-    .row
-      .large-8.columns
-        - if @upcoming_workshops.empty?
-          %p
-            = t("no_upcoming_events")
-          %p
-            =link_to t("view_past_events"), events_url(anchor: 'past'), class: "button round expand"
+        .text-center
+          = link_to "Sponsor a workshop", new_member_path, class: 'button tiny'
 
-        - if @upcoming_workshops.any?
-          - @upcoming_workshops.each do |date, workshops|
-            .row.grouped-events
-              .medium-12.columns
-                %h4= date
-              - workshops.each do |workshop|
-                = render partial: 'events/minified_event', locals: { event: workshop }
-      .large-4.columns#chapters
-        %h3 Local chapters
-        %ul.no-bullet
-          - @chapters.each do |chapter|
-            %li
-              = link_to chapter.name, chapter_path(chapter.slug)
+
+  %section#chapter.stripe
+    .events
+      .row
+        .large-8.columns
+          - if @upcoming_workshops.empty?
+            %p
+              = t("no_upcoming_events")
+            %p
+              =link_to t("view_past_events"), events_url(anchor: 'past'), class: "button round expand"
+
+          - if @upcoming_workshops.any?
+            - @upcoming_workshops.each do |date, workshops|
+              .row.grouped-events
+                .medium-12.columns
+                  %h4= date
+                - workshops.each do |workshop|
+                  = render partial: 'events/minified_event', locals: { event: workshop }
+        .large-4.columns#chapters
+          %h3 Local chapters
+          %ul.no-bullet
+            - @chapters.each do |chapter|
+              %li
+                = link_to chapter.name, chapter_path(chapter.slug)
