change list to navicon

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -54,5 +54,5 @@
         - else
           %li
             =link_to "#", class: "left-off-canvas-toggle", id: 'profile' do
-              .fa.fa-list
+              .fa.fa-navicon
               Menu
