--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -51,7 +51,7 @@
 
 
   %section#chapter.stripe
-    .events
+    .events#container
       .row
         .large-8.columns
           - if @upcoming_workshops.empty?
@@ -62,9 +62,8 @@
 
           - if @upcoming_workshops.any?
             - @upcoming_workshops.each do |date, workshops|
-              .row.grouped-events
-                .medium-12.columns
-                  %h4= date
+              .grouped-events
+                %h4= date
                 - workshops.each do |workshop|
                   = render partial: 'events/minified_event', locals: { event: workshop }
         .large-4.columns#chapters
