link to donations page

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -47,7 +47,7 @@
 
 
         .text-center
-          = link_to "Sponsor a workshop", new_member_path, class: 'button tiny'
+          = link_to "Sponsor a workshop", "http://donate.codebar.io", class: 'button tiny'
 
 
   %section#chapter.stripe
