--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -41,7 +41,7 @@
           %h4 Workshops
           = image_tag "collaboration.png"
           %br
-        %p We are sponsored and hosted by some amazing companies who support our cause. We usually spend the first 30' checking people in and having some food and a chat, followed by a lightning talk and <strong>lot's of coding</strong>!
+        %p We are sponsored and hosted by some amazing companies who support our cause. We usually spend the first 30' checking people in and having some food and a chat, followed by a lightning talk and <strong>lots of coding</strong>!
         %p
           Help our expansion and enable us to provide help and support to our chapters by hosting and sponsoring our workshops.
 
