change title to lowercase codebar

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     = render partial: 'layouts/meta'
     %link{ rel: "image_src", href: "http://codebar.io/images/logo-square.png" }
 
-    %title Codebar.io
+    %title codebar.io
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "vendor/modernizr"
     = javascript_include_tag "application", "data-turbolinks-track" => true
